--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,11 @@
       "openFiles": [
         "index.js"
       ]
+    },
+    "vscode": {
+      "extensions": [
+        "GitHub.copilot"
+      ]
     }
   },
   "portsAttributes": {
@@ -22,5 +27,7 @@
       "onAutoForward": "openPreview"
     }
   },
-  "forwardPorts": [3000]
+  "forwardPorts": [
+    3000
+  ]
 }
