--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-node_modules/
+/express-locallibrary-tutorial/node_modules
+.DS_Store
+.env
+.vscode/
+*.log
+coverage/
+dist/
+build/
+.next/
+.cache/
+.tmp/
+temp/
